--- a/config.toml
+++ b/config.toml
@@ -13,7 +13,7 @@ style = "github-dark"
 
 [params]
   author = "Nishant Nadkarni"
-  info = "AI/ML Developer"
+  info = "AI/ML Researcher"
   description = "Nishant Nadkarni's personal website"
   keywords = "blog,developer,personal"
   avatarurl = "images/avatar.png"
